// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthRestakeVault - upgrade does not modify the state variables 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 60359,
}
`;

exports[`EthRestakeVault - upgrade does not modify the state variables 2`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 60573,
}
`;

exports[`EthRestakeVault - upgrade does not modify the state variables 3`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 60463,
}
`;

exports[`EthRestakeVault - upgrade does not modify the state variables 4`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 61035,
}
`;

exports[`EthRestakeVault - upgrade does not modify the state variables 5`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 61249,
}
`;

exports[`EthRestakeVault - upgrade does not modify the state variables 6`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 61139,
}
`;
